Change conference title, add slide and remove number of pages

--- a/content.tex
+++ b/content.tex
@@ -323,25 +323,25 @@
 	Parameters: $C_u=100$, $C_n=100\cdot 10^{-4}$, $P_0=125$,  $h\approx 0.14$.
 \end{frame}
 
-% \begin{frame}{Three tumors aggregation ($\chi_0=0$, $\Delta t=10^{-5}$)}
-% 	\scriptsize
-% 	\begin{figure}
-% 		\centering
-% 		\hspace*{-0.6cm}
-% 		\begin{tabular}{cccc}
-% 			&\hspace*{-1cm}$t=2.5\cdot 10^{-2}$ & \hspace*{-1cm}$t=5.0\cdot 10^{-2}$ & \hspace*{-1cm}$t=7.5\cdot 10^{-2}$ \\
-% 			\rotatebox[origin=c]{90}{\textbf{DG}} &
-% 			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_DG_P0-125_dt-1e-5_nx-200_symmetric/tumor_DG-UPW_Pi1_u_i-2500_cropped.png}} &
-% 			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_DG_P0-125_dt-1e-5_nx-200_symmetric/tumor_DG-UPW_Pi1_u_i-5000_cropped.png}} &
-% 			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_DG_P0-125_dt-1e-5_nx-200_symmetric/tumor_DG-UPW_Pi1_u_i-7500_cropped.png}} \\
-% 			\rotatebox[origin=c]{90}{\textbf{FE}} &
-% 			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_FEM_P0-125_dt-1e-5_nx-200_symmetric/tumor_FEM_u_i-2500_cropped.png}} &
-% 			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_FEM_P0-125_dt-1e-5_nx-200_symmetric/tumor_FEM_u_i-5000_cropped.png}} &
-% 			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_FEM_P0-125_dt-1e-5_nx-200_symmetric/tumor_FEM_u_i-7500_cropped.png}}
-% 		\end{tabular}
-% 		\caption{Tumor cells.}
-% 	\end{figure}
-% \end{frame}
+\begin{frame}{Three tumors aggregation ($\chi_0=0$, $\Delta t=10^{-5}$)}
+	\scriptsize
+	\begin{figure}
+		\centering
+		\hspace*{-0.6cm}
+		\begin{tabular}{cccc}
+			&\hspace*{-1cm}$t=2.5\cdot 10^{-2}$ & \hspace*{-1cm}$t=5.0\cdot 10^{-2}$ & \hspace*{-1cm}$t=7.5\cdot 10^{-2}$ \\
+			\rotatebox[origin=c]{90}{\textbf{DG}} &
+			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_DG_P0-125_dt-1e-5_nx-200_symmetric/tumor_DG-UPW_Pi1_u_i-2500_cropped.png}} &
+			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_DG_P0-125_dt-1e-5_nx-200_symmetric/tumor_DG-UPW_Pi1_u_i-5000_cropped.png}} &
+			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_DG_P0-125_dt-1e-5_nx-200_symmetric/tumor_DG-UPW_Pi1_u_i-7500_cropped.png}} \\
+			\rotatebox[origin=c]{90}{\textbf{FE}} &
+			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_FEM_P0-125_dt-1e-5_nx-200_symmetric/tumor_FEM_u_i-2500_cropped.png}} &
+			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_FEM_P0-125_dt-1e-5_nx-200_symmetric/tumor_FEM_u_i-5000_cropped.png}} &
+			\raisebox{-0.47\height}{\includegraphics[scale=0.145]{img/three_tumors/test_FEM_P0-125_dt-1e-5_nx-200_symmetric/tumor_FEM_u_i-7500_cropped.png}}
+		\end{tabular}
+		\caption{Tumor cells.}
+	\end{figure}
+\end{frame}
 % \begin{frame}{Three tumors aggregation ($\chi_0=0$, $\Delta t=10^{-5}$)}
 % 	\scriptsize
 % 	\begin{figure}
