--- a/beamerouterthemedecolines.sty
+++ b/beamerouterthemedecolines.sty
@@ -7,6 +7,9 @@
 
 \mode<presentation>
 
+% Boolean used to indicate if we want to show the number of pages
+\DeclareOptionBeamer{nofpages}[true]{\def\beamer@decolines@nofpages{#1}}
+
 % String used between the current page and the total page count.
 \def\beamer@decolines@pageofpages{/}
 \DeclareOptionBeamer{pageofpages}{\def\beamer@decolines@pageofpages{#1}}
@@ -26,6 +29,7 @@
 \def\beamer@decolines@watermarkheightmult{1}
 \DeclareOptionBeamer{watermarkheightmult}{\def\beamer@decolines@watermarkheightmult{#1}}
 
+\ExecuteOptionsBeamer{nofpages=true}
 \ExecuteOptionsBeamer{titleline=false}
 \ProcessOptionsBeamer
 
@@ -76,7 +80,10 @@
   \hbox{%
   \begin{beamercolorbox}[wd=.2\paperwidth,ht=0ex,dp=0ex,center]{page of pages}%
     \usebeamerfont{palette primary}
-    \insertframenumber{} \beamer@decolines@pageofpages{} \inserttotalframenumber%
+    \def\beamer@decolines@truetext{true}
+    \ifx\beamer@decolines@nofpages\beamer@decolines@truetext%
+      \insertframenumber{} \beamer@decolines@pageofpages{} \inserttotalframenumber%
+    \fi
   \end{beamercolorbox}%
   \begin{beamercolorbox}[wd=.8\paperwidth,ht=0ex,dp=0ex]{}%
   \end{beamercolorbox}%
