--- a/tumors_talk.tex
+++ b/tumors_talk.tex
@@ -1,6 +1,7 @@
 \documentclass{beamer}
 
-\usetheme[%pageofpages=of,% String used between the current page and the
+\usetheme[nofpages=false, % Set to false to hide number of pages
+          %pageofpages=of,% String used between the current page and the
                          % total page count.
           bullet=circle,% Use circles instead of squares for bullets.
           titleline=true,% Show a line below the frame title.
@@ -31,7 +32,7 @@
 		\structure{
 			J. Rafael Rodr\'iguez Galv\'an \\ (Universidad de C\'adiz)\\ \vspace{0.2cm}
 			Francisco Guill\'en Gonz\'alez \\\vspace*{-0.15cm}(Universidad de Sevilla)}}
-		\\\vspace{0.2cm}\em {\scriptsize \textbf{CANA 2023} - June 5, 2023}}
+		\\\vspace{0.2cm}\em {\scriptsize \textbf{FEniCS  2023} - June 16, 2023}}
 
 \begin{document}
 \include{tikzstyles_UCA-UTC}
